# unknown_rx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  any_observer.h  build.cmd  cmake_utils.cmake  concepts_observable.h  concepts_observer.h  cpo_make_operator.h  generate_single_header.ps1  meta_utils.h  observable_interface.h  observables_factory.h  operator_tags.h  subject.h  tag_invoke.hpp  tag_invoke_with_extension.h  tests_concepts_observer.cpp  tricky_behavior.md  unknown.cpp  utils_containers.h  utils_observable.h  utils_observers.h
examples/: CMakeLists.txt
examples/UI_window_clicks/: CMakeLists.txt  main_UI_window_clicks.cpp  stub_window.h  utils.h
examples/port_RxCpp_linesfrombytes/: CMakeLists.txt  README.md  main_RxCpp_linesfrombytes.cpp
include/: any_observer.h  concepts_observable.h  concepts_observer.h  meta_utils.h  observable_interface.h  observables_factory.h  operator_tags.h  simple_scheduler_event_loop.h  subject.h  tag_invoke.hpp  utils_containers.h  utils_defines.h  utils_fast_FWD.h  utils_maybe_shared_ptr.h  utils_observable.h  utils_observers.h  utils_ref_tracking_observer.h  utils_wrappers.h  xrx_epilogue.h  xrx_prologue.h
include/debug/: assert_flag.h  assert_mutex.h  copy_move_life_tracking.h  malloc_allocator.h  new_allocs_stats.h  operator_new_override_for_stats.h  tracking_allocator.h
include/operators/: operator_as_async.h  operator_concat.h  operator_create.h  operator_filter.h  operator_flat_map.h  operator_from.h  operator_interval.h  operator_iterate.h  operator_observe_on.h  operator_publish.h  operator_range.h  operator_reduce.h  operator_repeat.h  operator_start_with.h  operator_subscribe_on.h  operator_take.h  operator_tap_do.h  operator_transform.h  operator_window.h  operator_window_toggle.h
include_single/xrx/: xrx_all.h
operators/: operator_create.h  operator_filter.h  operator_interval.h  operator_observe_on.h  operator_publish.h  operator_range.h  operator_subscribe_on.h  operator_take.h  operator_transform.h
sample_RxCpp_linesfrombytes/: CMakeLists.txt  README.md  main_RxCpp_linesfrombytes.cpp
sample_UI_window_clicks/: CMakeLists.txt  main_UI_window_clicks.cpp  stub_window.h  utils.h
test_single_compile/: CMakeLists.txt  tests_compile_xrx_all.cpp
test_xrx/: CMakeLists.txt  debug_copy_move.h  noop_archetypes.h  observer_mock.h  tests_concepts_observer.cpp  tests_operator_concat.cpp  tests_operator_create.cpp  tests_operator_filter.cpp  tests_operator_flat_map.cpp  tests_operator_from.cpp  tests_operator_interval.cpp  tests_operator_iterate.cpp  tests_operator_observe_on.cpp  tests_operator_publish.cpp  tests_operator_range.cpp  tests_operator_reduce.cpp  tests_operator_repeat.cpp  tests_operator_start_with.cpp  tests_operator_subscribe_on.cpp  tests_operator_take.cpp  tests_operator_tap_do.cpp  tests_operator_transform.cpp  tests_operator_window.cpp  tests_operator_window_toggle.cpp  tests_pipe.cpp  tests_subject.cpp  tests_utils_containers.cpp  tests_utils_maybe_shared_ptr.cpp  unknown.cpp
tests/: CMakeLists.txt  debug_copy_move.h  noop_archetypes.h  observer_mock.h  tests_concepts_observer.cpp  tests_operator_concat.cpp  tests_operator_create.cpp  tests_operator_filter.cpp  tests_operator_flat_map.cpp  tests_operator_from.cpp  tests_operator_interval.cpp  tests_operator_iterate.cpp  tests_operator_observe_on.cpp  tests_operator_publish.cpp  tests_operator_range.cpp  tests_operator_reduce.cpp  tests_operator_repeat.cpp  tests_operator_start_with.cpp  tests_operator_subscribe_on.cpp  tests_operator_take.cpp  tests_operator_tap_do.cpp  tests_operator_transform.cpp  tests_operator_window.cpp  tests_operator_window_toggle.cpp  tests_pipe.cpp  tests_subject.cpp  tests_utils_containers.cpp  tests_utils_maybe_shared_ptr.cpp  unknown.cpp
tests/single_compile/: CMakeLists.txt  tests_compile_create.cpp  tests_compile_filter.cpp  tests_compile_interval.cpp  tests_compile_observe_on.cpp  tests_compile_publish.cpp  tests_compile_range.cpp  tests_compile_subscribe_on.cpp  tests_compile_take.cpp  tests_compile_transform.cpp  tests_compile_xrx_all.cpp
tools/: generate_single_header.ps1
